<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/black_image"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/refund_title"
        android:textColor="@drawable/white"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/custTextView"
            android:layout_width="120dp"
            android:layout_height="fill_parent"
            android:text="@string/cust"
            android:textColor="@drawable/white"
            android:textSize="30dp" />

        <Spinner
            android:id="@+id/custSpinner"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/setbar_bg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/inventoryTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/inventoryType"
            android:textColor="@drawable/white"
            android:textSize="30dp" />

        <Spinner
            android:id="@+id/inventoryTypeSpinner"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/setbar_bg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/refundDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/refund_date"
            android:textColor="@drawable/white"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/refundDateEditText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/setbar_bg"
            android:ems="10"
            android:inputType="date"
            android:textSize="30dp" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@drawable/white"
            android:textSize="30dp" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textColor="@drawable/white"
            android:textSize="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5" >

    </LinearLayout>

</LinearLayout>