<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/black_image"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/refund_title"
        android:textColor="@drawable/white"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/barcodeScanTextView"
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/scan"
                    android:singleLine="true" 
            android:textColor="@drawable/white"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/barcodeScanEditText"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="@drawable/setbar_bg"
            android:ems="10"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7" >

        <ListView
            android:id="@+id/detailListView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/white" >

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@drawable/white"
            android:textSize="30dp" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:textColor="@drawable/white"
            android:textSize="30dp" />

    </LinearLayout>

</LinearLayout>